# streamsafe

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  docker-compose.yml  justfile  llms.txt  sr.yaml  video.mov
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
crates/streamsafe/: Cargo.toml  README.md
crates/streamsafe/examples/: audio_extract.rs  rtsp_archiver.rs
crates/streamsafe/src/: broadcast.rs  channel_source.rs  error.rs  error_sink.rs  fallible.rs  fanout.rs  filter_transform.rs  lib.rs  merge.rs  pipeline.rs  pipeline_sink.rs  runtime.rs  sink.rs  source.rs  transform.rs
crates/streamsafe/src/media/: audio_extract.rs  file_source.rs  frame_counter.rs  mod.rs  rtsp_source.rs  segment_sink.rs  wav_sink.rs
examples/fight-flow/: Cargo.toml  README.md
examples/fight-flow/src/: main.rs
examples/finance-flow/: Cargo.toml  README.md
examples/finance-flow/src/: main.rs
skills/video-archiver/: SKILL.md
src/: main.rs
