[package]
name = "vsa-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer="0.21.1"
tracing-gstreamer = "0.6.0"
tracing = "0.1.39"
tracing-subscriber = {version="0.3.17", features=["json"]}
ctrlc = "3.4.1"
opencv = "0.86.0"
termion = "2.0.1"
chrono = "0.4.31"
