[package]
name = "streamsafe"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Type-safe async pipeline framework for data processing"
license = "Apache-2.0"
repository = "https://github.com/urmzd/streamsafe"
readme = "../../README.md"
keywords = ["pipeline", "async", "streaming", "data", "processing"]
categories = ["asynchronous", "data-structures"]
authors = ["Urmzd Mukhammadnaim"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1"
thiserror = "2"
tracing = "0.1"

futures = { version = "0.3", optional = true }
retina = { version = "0.4", optional = true }
muxide = { version = "0.2", optional = true }
hound = { version = "3.5", optional = true }
url = { version = "2", optional = true }
# Requires FFmpeg system libraries (brew install ffmpeg / apt install libavcodec-dev libavformat-dev libavutil-dev)
ffmpeg-next = { version = "7", optional = true }

[features]
default = ["media"]
media = ["dep:retina", "dep:muxide", "dep:hound", "dep:url", "dep:futures"]
ffmpeg = ["media", "dep:ffmpeg-next"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
