[package]
name = "fight-flow"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
streamsafe = { path = "../../crates/streamsafe", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
